<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="retrofit_type_safe_http_client_for_android_and_java_by_square_inc">Retrofit - Type-safe HTTP client for Android and Java by Square,Inc</string>
    <string name="loadapp_current_repository_by_udacity">LoadApp - Current Repository by Udacity</string>
    <string name="glide_image_loading_library_by_bumptech">Glide - Image Loading Library by BumpTech</string>
    <string name="select_file_to_download">Please select the file to download</string>
    <string name="ok">Ok</string>
    <string name="status">Status</string>
    <string name="success">Success</string>
    <string name="file_name">File name</string>
    <string name="view">view</string>
    <string name="successfully_downloaded">Successfully downloaded</string>
    <string name="download">Download</string>
    <string name="we_are_loading">We are loading</string>
</resources>
