<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/motion_layout"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    app:layoutDescription="@xml/details_animation"
    tools:showIn="@layout/activity_detail">


    <TextView
        android:id="@+id/file_name_text"
        style="@style/wordStyle"
        android:text="@string/file_name" />

    <TextView
        android:id="@+id/file_name"
        style="@style/wordStyle"

        />

    <TextView
        android:id="@+id/status_text"
        style="@style/wordStyle"
        android:text="@string/status" />

    <TextView
        android:id="@+id/status"
        style="@style/wordStyle"
        android:text="@string/success" />

    <Button
        android:id="@+id/ok_button"
        style="@style/wordStyle"
        android:background="@color/colorAccent"
        android:onClick="goToMain"
        android:text="@string/ok" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="145dp" />
</androidx.constraintlayout.motion.widget.MotionLayout>
